Fixes bug where image wouldn't wrap properly on larger images

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   color: var(--clr-fg);
-  object-fit: contain;
   height: 100vh;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
